--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "canister_deploy_mainnet": "dfx deploy --network ic animal_adoption_center",
         "canister_uninstall": "dfx canister uninstall-code animal_adoption_center",
         "canister_call": "dfx canister call animal_adoption_center",
-        "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'"
+        "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
+        "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption"
     },
     "dependencies": {
         "azle": "0.19.0",
