feat(owner): set the canister owner during canister initialization
- add npm command for creating `owner` identity
- update npm command for deploying the canister so that it is deployed by the `owner` identity
- update npm command for uninstalling the canister so that it is uninstalled by the `owner` identity

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "dfx_install": "DFX_VERSION=0.15.1 sh -ci \"$(curl -fsSL https://sdk.dfinity.org/install.sh)\"",
         "replica_start": "dfx start --background",
         "replica_stop": "dfx stop",
-        "canister_deploy_local": "dfx deploy animal_adoption_center",
+        "create_identities": "dfx identity new owner",
+        "remove_identities": "dfx identity remove owner",
+        "canister_deploy_local": "dfx deploy animal_adoption_center --identity owner",
         "canister_deploy_mainnet": "dfx deploy --network ic animal_adoption_center",
-        "canister_uninstall": "dfx canister uninstall-code animal_adoption_center",
+        "canister_uninstall": "dfx canister uninstall-code animal_adoption_center --identity owner",
         "canister_call": "dfx canister call animal_adoption_center",
         "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
         "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption",
