--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
         "dfx_install": "DFX_VERSION=0.15.1 sh -ci \"$(curl -fsSL https://sdk.dfinity.org/install.sh)\"",
         "replica_start": "dfx start --background",
         "replica_stop": "dfx stop",
-        "create_identities": "dfx identity new owner",
-        "remove_identities": "dfx identity remove owner",
+        "create_identities": "dfx identity new owner && dfx identity new employee",
+        "remove_identities": "dfx identity remove owner && dfx identity remove employee",
         "canister_deploy_local": "dfx deploy animal_adoption_center --identity owner",
         "canister_deploy_mainnet": "dfx deploy --network ic animal_adoption_center",
         "canister_uninstall": "dfx canister uninstall-code animal_adoption_center --identity owner",
         "canister_call": "dfx canister call animal_adoption_center",
+        "canister_call_add_employee": "dfx identity get-principal --identity employee | xargs -I {} dfx canister call animal_adoption_center --identity owner addEmployee '(principal \"{}\")'",
         "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
         "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption",
         "canister_call_revoke_adoption_listing": "dfx canister call animal_adoption_center revokeAdoptionListing",
