--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
         "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption",
         "canister_call_revoke_adoption_listing": "dfx canister call animal_adoption_center revokeAdoptionListing",
-        "canister_call_submit_adoption_request": "dfx canister call animal_adoption_center submitAdoptionRequest"
+        "canister_call_submit_adoption_request": "dfx canister call animal_adoption_center submitAdoptionRequest",
+        "canister_call_approve_adoption_request": "dfx canister call animal_adoption_center --identity employee approveAdoptionRequest"
     },
     "dependencies": {
         "azle": "0.19.0",
