--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption",
         "canister_call_revoke_adoption_listing": "dfx canister call animal_adoption_center revokeAdoptionListing",
         "canister_call_submit_adoption_request": "dfx canister call animal_adoption_center submitAdoptionRequest",
-        "canister_call_approve_adoption_request": "dfx canister call animal_adoption_center --identity employee approveAdoptionRequest"
+        "canister_call_approve_adoption_request": "dfx canister call animal_adoption_center --identity employee approveAdoptionRequest",
+        "canister_call_reject_adoption_request": "dfx canister call animal_adoption_center --identity employee rejectAdoptionRequest"
     },
     "dependencies": {
         "azle": "0.19.0",
