--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "canister_call_set_shelter_capacity": "dfx canister call animal_adoption_center --identity owner setShelterCapacity",
         "canister_call_get_shelter_capacity": "dfx canister call animal_adoption_center getShelterCapacity",
         "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
+        "canister_call_get_adoption_listing": "dfx canister call animal_adoption_center getAdoptionListing",
         "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption",
         "canister_call_revoke_adoption_listing": "dfx canister call animal_adoption_center revokeAdoptionListing",
         "canister_call_submit_adoption_request": "dfx canister call animal_adoption_center submitAdoptionRequest",
