build: update npm scripts
- `clean` script doesn't remove the `package-lock.json` file
- `replica_start` script starts the local canister execution environment and web server processes in a clean state
- `create_identities` script creates `user1` and `user2` identities
- `remove_identities` script removes `user1` and `user2` identities
- update scripts related to invoking canister functions with the relevant identity
- add `clean_state` script
- add `canister_setup` script

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "license": "MIT",
     "private": false,
     "scripts": {
-        "clean": "rm -rf .azle .dfx node_modules package-lock.json",
+        "clean": "rm -rf .azle .dfx node_modules",
         "dfx_install": "DFX_VERSION=0.15.1 sh -ci \"$(curl -fsSL https://sdk.dfinity.org/install.sh)\"",
-        "replica_start": "dfx start --background",
+        "replica_start": "dfx start --background --clean",
         "replica_stop": "dfx stop",
-        "create_identities": "dfx identity new owner && dfx identity new employee",
-        "remove_identities": "dfx identity remove owner && dfx identity remove employee",
+        "create_identities": "dfx identity new owner && dfx identity new employee && dfx identity new user1 && dfx identity new user2",
+        "remove_identities": "dfx identity remove owner && dfx identity remove employee && dfx identity remove user1 && dfx identity remove user2",
         "canister_deploy_local": "dfx deploy animal_adoption_center --identity owner",
         "canister_deploy_mainnet": "dfx deploy --network ic animal_adoption_center",
         "canister_uninstall": "dfx canister uninstall-code animal_adoption_center --identity owner",
@@ -21,14 +21,16 @@
         "canister_call_add_employee": "dfx identity get-principal --identity employee | xargs -I {} dfx canister call animal_adoption_center --identity owner addEmployee '(principal \"{}\")'",
         "canister_call_set_shelter_capacity": "dfx canister call animal_adoption_center --identity owner setShelterCapacity",
         "canister_call_get_shelter_capacity": "dfx canister call animal_adoption_center getShelterCapacity",
-        "canister_call_list_for_adoption": "dfx canister call animal_adoption_center listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
+        "canister_call_list_for_adoption": "dfx canister call animal_adoption_center --identity user1 listForAdoption '(record {\"name\"= \"name1\"; \"species\"= \"species1\"; \"breed\"= \"breed1\"; \"gender\"= \"male\"; \"age\"= 1; \"description\"= \"description1\";})'",
         "canister_call_get_adoption_listing": "dfx canister call animal_adoption_center getAdoptionListing",
         "canister_call_get_available_for_adoption": "dfx canister call animal_adoption_center getAvailableForAdoption",
-        "canister_call_revoke_adoption_listing": "dfx canister call animal_adoption_center revokeAdoptionListing",
-        "canister_call_submit_adoption_request": "dfx canister call animal_adoption_center submitAdoptionRequest",
+        "canister_call_revoke_adoption_listing": "dfx canister call animal_adoption_center --identity user1 revokeAdoptionListing",
+        "canister_call_submit_adoption_request": "dfx canister call animal_adoption_center --identity user2 submitAdoptionRequest",
         "canister_call_get_adoption_request": "dfx canister call animal_adoption_center getAdoptionRequest",
         "canister_call_approve_adoption_request": "dfx canister call animal_adoption_center --identity employee approveAdoptionRequest",
-        "canister_call_reject_adoption_request": "dfx canister call animal_adoption_center --identity employee rejectAdoptionRequest"
+        "canister_call_reject_adoption_request": "dfx canister call animal_adoption_center --identity employee rejectAdoptionRequest",
+        "canister_setup": "npm i && npm run create_identities && npm run replica_start && npm run && npm run canister_deploy_local",
+        "clean_state": "(npm run canister_uninstall || true) && (npm run replica_stop || true) && (npm run remove_identities || true) && npm run clean"
     },
     "dependencies": {
         "azle": "0.19.0",
